--- a/Fridge_Shopping_app/Fridge_Shopping_app/Fridge_Shopping_app.csproj
+++ b/Fridge_Shopping_app/Fridge_Shopping_app/Fridge_Shopping_app.csproj
@@ -60,8 +60,11 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
 		<PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
-		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="9.0.5" />
+		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.1" />
 	</ItemGroup>
+
 
 </Project>
