--- a/Fridge_Shopping_app/Fridge_Shopping_app/Fridge_Shopping_app.csproj
+++ b/Fridge_Shopping_app/Fridge_Shopping_app/Fridge_Shopping_app.csproj
@@ -66,5 +66,11 @@
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.1" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <MauiXaml Update="EditorPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	</ItemGroup>
+
 
 </Project>
