Shopping list page view model + some changes
- Changed EditorPage to FridgeEditorPage, shopping list page can use it directly to add items to the fridge
- Some small fixes and tweaks

--- a/Fridge_Shopping_app/Fridge_Shopping_app/Fridge_Shopping_app.csproj
+++ b/Fridge_Shopping_app/Fridge_Shopping_app/Fridge_Shopping_app.csproj
@@ -67,7 +67,13 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <MauiXaml Update="EditorPage.xaml">
+	  <Compile Update="FridgeEditorPage.xaml.cs">
+	    <DependentUpon>FridgeEditorPage.xaml</DependentUpon>
+	  </Compile>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <MauiXaml Update="FridgeEditorPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	</ItemGroup>
