--- a/Fridge_Shopping_app/Fridge_Shopping_app/Fridge_Shopping_app.csproj
+++ b/Fridge_Shopping_app/Fridge_Shopping_app/Fridge_Shopping_app.csproj
@@ -76,6 +76,12 @@
 	  <MauiXaml Update="FridgeEditorPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="QuotasEditorPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="QuotasPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="ShoppingListEditorPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
